After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765541 - smartencoder: Only accept TIME segments for real
smartencoder: Only accept TIME segments for real
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-25 14:16 UTC by Sebastian Dröge (slomo)
Modified: 2016-04-26 08:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
smartencoder: Only accept TIME segments for real (1.65 KB, patch)
2016-04-25 14:17 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2016-04-25 14:16:58 UTC
See commit message. Without this there are various assertions if you run into
one of those situations.
Comment 1 Sebastian Dröge (slomo) 2016-04-25 14:17:02 UTC
Created attachment 326693 [details] [review]
smartencoder: Only accept TIME segments for real

... and don't try to push pending data without ever having received a SEGMENT
event before EOS
Comment 2 Sebastian Dröge (slomo) 2016-04-25 15:50:42 UTC
Attachment 326693 [details] pushed as 7ba7c58 - smartencoder: Only accept TIME segments for real